# arm-agedon

./: .gitignore  README.md
C_project/: .gitignore  README.md  sdkconfig
C_project/components/accel/: CMakeLists.txt  accel.c  accel_usage.c
C_project/components/accel/include/: accel.h
C_project/components/mqtt_publisher/: CMakeLists.txt  mqtt_publisher.c
C_project/components/mqtt_publisher/include/: mqtt_publisher.h
C_project/components/potentiometre/: CMakeLists.txt  potentiometre.c
C_project/components/potentiometre/include/: potentiometre.h
C_project/main/: main.c
CodeAccelerometre/Python/: main.py
CodeAccelerometre/Python/madgwick_py-master/: madgwickahrs.py
arm-agedon_C/: CMakeLists.txt
arm-agedon_C/main/: CMakeLists.txt  arm-agedon_C.c
glove_project/: README.md  sdkconfig  sdkconfig.old
glove_project/components/accel/: CMakeLists.txt  accel.c  accel_usage.c
glove_project/components/accel/include/: accel.h
glove_project/components/mqtt_publisher/: CMakeLists.txt  mqtt_publisher.c  potentiometre.c
glove_project/components/mqtt_publisher/include/: mqtt_publisher.h  potentiometre.h
glove_project/components/potentiometre/: potentiometre.c
glove_project/components/potentiometre/include/: potentiometre.h
glove_project/main/: main.c
hand_proj/: CMakeLists.txt  cmds  sdkconfig  sdkconfig.old
hand_proj/components/mqtt_subscriber/: CMakeLists.txt  mqtt_subscriber.c
hand_proj/components/servo/: CMakeLists.txt  servo.c
hand_proj/main/: hello_world_main.c
hand_project/components/mqtt_subscriber/: CMakeLists.txt  mqtt_subscriber.c
(+3 files in other folders)
